kustomize/overlays/scots-lab/apps/outline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: outline
  labels:
    app: outline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      priorityClassName: homelab-data
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: outline
          image: outlinewiki/outline:1.7.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 600Mi
            limits:
              cpu: "1"
              memory: 1Gi

        - name: postgres
          image: postgres:16-bookworm
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

        - name: redis
          image: redis:7-bookworm
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis
          command: ["redis-server", "--appendonly", "yes"]
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi

        - name: minio
          image: minio/minio:RELEASE.2025-09-07T16-13-09Z
          imagePullPolicy: IfNotPresent
          args: ["server", "/data"]
          ports:
            - containerPort: 9000
              name: s3
          volumeMounts:
            - name: minio-data
              mountPath: /data
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi



      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: outline-postgres-data
        - name: minio-data
          persistentVolumeClaim:
            claimName: outline-minio-data
