kustomize/overlays/scots-lab/apps/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
spec:
  selector:
    app: outline
  ports:
    - name: http
      port: 3000
      targetPort: 3000
